--- a/public/s/index.html
+++ b/public/s/index.html
@@ -66,7 +66,7 @@
 		<script src="/js/ajax-form.js"></script>
 		<script src="/js/drawPieChart.js"></script>
 		<script src="/js/drawVerificationCode.js"></script>
-        <script src="/js/drawAwardsList.js"></script>
+        <script src="/js/takeoutAwardsList.js"></script>
 		<script src="/js/u.js"></script>
 		<script src="/js/s.js"></script>
 	</body>
