--- a/public/s/open.html
+++ b/public/s/open.html
@@ -4,10 +4,12 @@
 
 	<form id="form-open">
 		<div class="form-group">
-			<input type="text" class="form-control" name="lname" placeholder="讲座名称">
-			<span class="input-group-btn">
-				<button class="btn btn-primary" href="#/enter">管理讲座</button>
-			</span>
+			<div class="input-group">
+				<input type="text" class="form-control" name="lname" placeholder="讲座名称">
+				<span class="input-group-btn">
+					<button class="btn btn-primary" href="#/enter">管理讲座</button>
+				</span>
+			</div>
 		</div>
         <div class="form-group">
             <input type="text" class="form-control" name="lpwd" placeholder="管理密码">
