--- a/public/a/index.html
+++ b/public/a/index.html
@@ -42,6 +42,7 @@
 								<li>
 									<a>
 										<i class="glyphicon glyphicon-user"></i>
+										<span>听众 </span>
 										<span id="username"> </span>
 									</a>
 								</li>
