--- a/public/s/index.html
+++ b/public/s/index.html
@@ -43,6 +43,7 @@
 								<li>
 									<a>
 										<i class="glyphicon glyphicon-user"></i>
+										<span>演讲者 </span>
 										<span id="username"> </span>
 									</a>
 								</li>
