--- a/public/a/lotterys.html
+++ b/public/a/lotterys.html
@@ -1,64 +1,52 @@
 
-<style>
-    #table-lotterylist th:nth-child(1) {
-        min-width: 80px;
-    }
-    #table-lotterylist th:nth-child(2) {
-        min-width: 60px;
-    }
-    #table-lotterylist th:nth-child(3) {
-        min-width: 120px;
-    }
-</style>
-
 <div id="main-wrapper">
-    <h1>投票列表</h1>
+	<h1>抽奖列表</h1>
 
-    <table id="table-lotterylist" class="table table-striped">
-        <thead>
-        <tr>
-            <th class="long">抽奖</th>
-            <th>状态</th>
-            <th>操作</th>
-        </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+	<table id="table-lotterylist" class="table table-striped">
+		<thead>
+		<tr>
+			<th class="long">抽奖</th>
+			<th>状态</th>
+			<th>操作</th>
+		</tr>
+		</thead>
+		<tbody></tbody>
+	</table>
 </div>
 
 <script>
-    var $tableList = $('#table-lotterylist'),
-        $tbody = $tableList.find('tbody');
+	var $tableList = $('#table-lotterylist'),
+		$tbody = $tableList.find('tbody');
 
 
-    updateLotteryList();
+	updateLotteryList();
 
-    function updateLotteryList() {
-        $.get('/do/a/lotterylist', function(resObj){
-            var ok = resObj['ok'], msg = resObj['msg'];
-            msg && notify(msg, ok);
-            if (! ok) return;
-            var lotteryList = resObj['lotteryList'];
-            if (! lotteryList.length) {
-                return $tbody.html([
-                    '<tr>',
-                    '<td colspan="3">没有记录</td>',
-                    '</tr>'
-                ].join(''));
-            }
-            $tbody.html(_.reduce(lotteryList, function(memo, lottery){
-                return memo + [
-                    '<tr>',
-                    '<td>' + lottery['content'] + '</td>',
-                    '<td>' + (lottery['state'] === 'active' ? '已结束' : '未开始') + '</td>',
-                    '<td>',
-                    '<a href="#/viewlottery?lyid='+ lottery['id'] +'">详情</a>',
-                    '</td>',
-                    '</tr>'
-                ].join('');
-            }, ''));
-        });
-    }
+	function updateLotteryList() {
+		$.get('/do/a/lotterylist', function(resObj){
+			var ok = resObj['ok'], msg = resObj['msg'];
+			msg && notify(msg, ok);
+			if (! ok) return;
+			var lotteryList = resObj['lotteryList'];
+			if (! lotteryList.length) {
+				return $tbody.html([
+					'<tr>',
+					'<td colspan="3">没有记录</td>',
+					'</tr>'
+				].join(''));
+			}
+			$tbody.html(_.reduce(lotteryList, function(memo, lottery){
+				return memo + [
+					'<tr>',
+					'<td>' + lottery['content'] + '</td>',
+					'<td>' + (lottery['state'] === 'active' ? '已结束' : '未开始') + '</td>',
+					'<td>',
+					'<a href="#/viewlottery?lyid='+ lottery['id'] +'">详情</a>',
+					'</td>',
+					'</tr>'
+				].join('');
+			}, ''));
+		});
+	}
 
 </script>
 
