ajax with site handler, lecuture events

--- a/public/a/join.html
+++ b/public/a/join.html
@@ -26,14 +26,8 @@
 
 	$formJoin.ajaxForm({
 		url: '/do/a/join',
-		success: function(resObj){
-			var ok = resObj['ok'], msg = resObj['msg'];
-			msg && notify(msg, ok);
-			if (ok) {
-				loadFrame('#/view');
-				$navbar.find('.sec').addClass('hidden')
-					.filter('#sec-in').removeClass('hidden');
-			}
+		success: function(res){
+			if (res['ok']) $window.trigger('enter_lecture', '#/view');
 		}
 	});
 </script>
