--- a/public/s/open.html
+++ b/public/s/open.html
@@ -12,7 +12,10 @@
 			</div>
 		</div>
         <div class="form-group">
-            <input type="text" class="form-control" name="lpwd" placeholder="管理密码">
+            <input type="password" class="form-control" name="lpwd1" placeholder="管理密码">
+        </div>
+        <div class="form-group">
+            <input type="password" class="form-control" name="lpwd2" placeholder="重复密码">
         </div>
         <div class="form-group">
             <input type="text" class="form-control" name="nick" placeholder="讲者昵称">
