--- a/public/s/votes.html
+++ b/public/s/votes.html
@@ -7,7 +7,7 @@
 		min-width: 60px;
 	}
 	#table-votelist th:nth-child(3) {
-		min-width: 120px;
+		min-width: 135px;
 	}
 </style>
 
@@ -35,7 +35,25 @@
 					<th>操作</th>
 				</tr>
 				</thead>
-				<tbody></tbody>
+				<tbody>
+                    <script type="text/html" id= "tr-tmpl">
+                        <tr>
+                            <td><%- content %></td>
+                            <td><%= state %></td>
+                            <td>
+                                <a href="#/viewvote?vid=<%= id %>">详情</a>
+                                &nbsp;&nbsp;
+                                <% if (state === '开启') { %>
+                                    <a data-vid="<%= id %>" class="ex-link offvote">关闭</a>
+                                <% } else { %>
+                                    <a data-vid="<%= id %>" class="ex-link onvote">开启</a>
+                                <% } %>
+                                &nbsp;&nbsp;
+                                <a data-vid="<%= id %>" class="ex-link delvote">删除</a>
+                            </td>
+                        </tr>
+                    </script>
+				</tbody>
 			</table>
 		</div>
 		<div class="tab-pane" id="tab-add">
@@ -67,7 +85,8 @@
 <script>
 	var $tableList = $('#table-votelist'),
 		$tbody = $tableList.find('tbody'),
-		$formAdd = $('#form-add');
+		$formAdd = $('#form-add'),
+        trTmpl = _.template($tbody.find('#tr-tmpl').html());
 
 	$('.nav-tabs a').click(function(ev){
 		ev.preventDefault();
@@ -127,21 +146,11 @@
 				].join(''));
 			}
 			$tbody.html(_.reduce(voteList, function(memo, vote){
-				return memo + [
-					'<tr>',
-						'<td>' + vote['content'] + '</td>',
-						'<td>' + (vote['state'] === 'active' ? '开启' : '关闭') + '</td>',
-						'<td>',
-							'<a href="#/viewvote?vid='+ vote['id'] +'">详情</a>',
-						'&nbsp;&nbsp;',
-							vote['state'] === 'active' ?
-									'<a data-vid="'+ vote['id'] +'" class="ex-link offvote">关闭</a>':
-									'<a data-vid="'+ vote['id'] +'" class="ex-link onvote">开启</a>',
-							'&nbsp;&nbsp;',
-							'<a data-vid="'+ vote['id'] +'" class="ex-link delvote">删除</a>',
-						'</td>',
-					'</tr>'
-				].join('');
+                return memo + trTmpl({
+                    id:vote.id,
+                    content: vote.content,
+                    state: vote['state'] === 'active' ? '开启' : '关闭'
+                });
 			}, ''));
 		});
 	}
