--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -12,7 +12,7 @@
 			</div>
 		</div>
 		<div class="form-group">
-			<input type="text" class="form-control" name="lpwd" placeholder="输入密码">
+			<input type="password" class="form-control" name="lpwd" placeholder="输入密码">
 		</div>
 		<div class="form-group">
 			<div class="input-group">
