--- a/public/a/audience.html
+++ b/public/a/audience.html
@@ -23,7 +23,7 @@
 <script>
 	var $tableAudience = $('#table-audience'),
 		$tbody = $tableAudience.find('tbody'),
-		trTmpl = $tbody.find('#tr-tmpl').html();
+		trTmpl = _.template($tbody.find('#tr-tmpl').html());
 
 	updateAudienceList();
 
@@ -41,7 +41,7 @@
 					].join(''));
 			}
 			$tbody.html(_.reduce(audienceList, function(memo, audience){
-				return memo + _.template(trTmpl, {
+				return memo + trTmpl({
 					name: audience.name,
 					onlinetime: strTime(Date.now() - audience.jointime, true)
 				});
