--- a/public/a/viewvote.html
+++ b/public/a/viewvote.html
@@ -51,7 +51,7 @@
                 return memo + [
                     '<li>',
                     '<div class="square-count"></div>',
-                        '<span class="word">'+ pair[1] +' ('
+                        '<span class="count">'+ pair[1] +' ('
                             + (sum ? (pair[1]/sum)*100 : 0) +
                             '%)</span>',
                     '</li>'
