--- a/public/a/vote.html
+++ b/public/a/vote.html
@@ -9,7 +9,15 @@
 		<li class="list-group-item">
 			<span class="li-label">选项相关</span>
 			<form id="form-vote">
-				<div id="words" class="btn-group-vertical" data-toggle="buttons"></div>
+				<div id="words" class="btn-group-vertical" data-toggle="buttons">
+                    <script type="text/html" id= "label-tmpl">
+                        <label class="btn btn-default btn-lg btn-block">
+                            <input type="radio" name="word" value="<%- option %>">
+                                   <%- option %>
+                        </label>
+
+                    </script>
+				</div>
 				<div class="form-group">
 					<button type="submit" class="btn btn-primary btn-lg btn-block">
 						提交投票
@@ -23,7 +31,10 @@
 <script>
 	var vid = parseInt(getHashParams()['vid']),
 		$listWords = $('#words'),
-		$formVote = $('#form-vote');
+		$formVote = $('#form-vote'),
+        labelTmpl = _.template($listWords.find('#label-tmpl').html());
+
+
 
 	$formVote.on('submit', function(ev) {
 		ev.preventDefault();
@@ -48,14 +59,12 @@
 			options = vote['options'];
 
 		$('#content').text(content);
-		var pairs = _.pairs(options),
-			listHtml = _.reduce(pairs, function(memo, pair, i){
-				return memo + [
-					'<label class="btn btn-default btn-lg btn-block">',
-						'<input type="radio" name="word" value="'+ pair[0] +'">', pair[0],
-					'</label>'
-				].join('');
-			}, '');
-		$listWords.html(listHtml);
+		var pairs = _.pairs(options);
+		$listWords.html(_.reduce(pairs, function(memo, pair, i){
+            return memo + labelTmpl({
+                option: pair[0]
+            });
+        }, '')
+        );
 	});
 </script>
