lectkey on navbar

--- a/public/s/index.html
+++ b/public/s/index.html
@@ -42,6 +42,13 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li>
 									<a>
+										<i class="glyphicon glyphicon-tags"></i>
+										<span>讲座 </span>
+										<span id="lectkey"> </span>
+									</a>
+								</li>
+								<li>
+									<a>
 										<i class="glyphicon glyphicon-user"></i>
 										<span>演讲者 </span>
 										<span id="username"> </span>
