--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -43,8 +43,7 @@
             msg && notify(msg, ok);
 			if (ok) {
 				loadFrame('#/view');
-				$navbar.find('.sec').addClass('hidden')
-					.filter('#sec-in').removeClass('hidden');
+				updateNavbar();
 			} else {
 				showValicode();
 				$formOpen.find('[name="vcode"]').val('');
