--- a/public/a/index.html
+++ b/public/a/index.html
@@ -16,7 +16,10 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand">演讲家App</a>
+						<a class="navbar-brand">
+							<img src="/img/logo.jpg" />
+							演讲家App
+						</a>
 					</div>
 					<section id="sec-out" class="sec hidden">
 						<div class="navbar-collapse collapse">
