--- a/public/s/index.html
+++ b/public/s/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 	<body>
-		<div id="body-wrapper">
+		<div id="main">
 			<div id="navbar" class="navbar navbar-default navbar-static-top" role="navigation">
 				<div class="container">
 					<div class="navbar-header">
@@ -16,7 +16,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand">
+						<a class="navbar-brand" href="/">
 							<img src="/img/logo.jpg" />演讲家App
 						</a>
 					</div>
@@ -61,9 +61,14 @@
 					</section>
 				</div>
 			</div>
-
 			<div id="frame" class="container"></div>
 		</div>
+
+		<footer>
+			<div class="container">
+				<p class="text-muted credit">© 2013 3dobe WYU</p>
+			</div>
+		</footer>
 
 		<script src="/bower_components/underscore/underscore-min.js"></script>
 		<script src="/bower_components/jquery/jquery.min.js"></script>
