--- a/public/a/qna.html
+++ b/public/a/qna.html
@@ -37,6 +37,45 @@
                     </tr>
                 </script>
 			</tbody>
+			<tfoot>
+			<tr>
+				<td colspan="2">
+					<script type="text/html" id="pagin-tmpl">
+						<ul class="pagination">
+							<li>
+								<a onclick="getMessageList(1)">&laquo;</a>
+							</li>
+							<% if (current > 2){ %>
+								<li class="disabled">
+									<a>..</a>
+								</li>
+							<% } %>
+							<% if (prev) { %>
+								<li>
+									<a onclick="getMessageList(<%- prev %>)"><%- prev %></a>
+								</li>
+							<% } %>
+							<li class="active">
+								<a onclick="getMessageList(<%- current %>)"><%- current %></a>
+							</li>
+							<% if (next) { %>
+								<li>
+									<a onclick="getMessageList(<%- next %>)"><%- next %></a>
+								</li>
+							<% } %>
+							<% if(current < (count - 1)){ %>
+								<li class="disabled">
+									<a>..</a>
+								</li>
+							<% } %>
+							<li>
+								<a onclick="getMessageList(<%- count %>)">&raquo;</a>
+							</li>
+						</ul>
+					</script>
+				</td>
+			</tr>
+		</tfoot>
 			</table>
 		</div>
 		<div class="tab-pane" id="tab-add">
@@ -58,10 +97,12 @@
 		$tbody = $table.find('tbody'),
 		$formToggle = $('#form-qna-toggle'),
 		$formAdd = $('#form-add'),
-        trTmpl = _.template($tbody.find('#tr-tmpl').html());
+        trTmpl = _.template($tbody.find('#tr-tmpl').html()),
+        $paginTmpl = $table.find('#pagin-tmpl'),
+		paginTmpl = _.template($paginTmpl.html());
 
 
-	$.get("/do/a/getqna", function(resObj){
+	$.get("/do/a/getqna",function(resObj){
 		var state = resObj['state'];
 		$formToggle.find('[value="'+ state +'"]').addClass('active');
 	});
@@ -81,17 +122,20 @@
 			ok && reloadFrame();
 		}
 	});
-	getMessageList();
+	getMessageList(1);
 
-	function getMessageList() {
-		$.get('/do/a/msglist', function(resObj){
+	function getMessageList(page) {
+		$.get('/do/a/msglist',{
+		page:page
+	},  function(resObj){
 			var ok = resObj['ok'], msg = resObj['msg'];
 			msg && notify(msg, ok);
 			if (! ok) return;
-			var msgList = resObj['msgList'];
+			var total = resObj['total'],			
+				msgList = resObj['msgList'];
 			if (! msgList.length) {
 				return $tbody.html([
-					'<tr>',
+					'<tr class="text-center">',
 						'<td colspan="2">没有记录</td>',
 					'</tr>'
 				].join(''));
@@ -102,7 +146,14 @@
                     text: msg.text
                 });
             }, ''));
-
+            var count = Math.ceil(total / pageSize);
+			$paginTmpl.next().remove();
+			$paginTmpl.after(paginTmpl({
+				current: page,
+				prev: page > 1 ? page - 1 : null,
+				next: page < count ? page + 1 : null,
+				count: count
+			}));
 		});
 	}
 </script>
