--- a/public/a/lotterys.html
+++ b/public/a/lotterys.html
@@ -1,7 +1,8 @@
 
 <div id="main-wrapper">
-	<h1>抽奖列表</h1>
-
+	<h1>
+		<i class="glyphicon glyphicon-th"></i>抽奖管理
+	</h1>
 	<table id="table-lotterylist" class="table table-striped">
 		<thead>
 		<tr>
