--- a/public/a/share.html
+++ b/public/a/share.html
@@ -6,8 +6,9 @@
 	}
 </style>
 <div id="main-wrapper">
-	<h1>文件共享</h1>
-
+	<h1>
+		<i class="glyphicon glyphicon-file"></i>文件共享
+	</h1>
 	<table id="table-filelist" class="table table-striped">
 		<thead>
 		<tr>
