--- a/public/s/audience.html
+++ b/public/s/audience.html
@@ -1,6 +1,8 @@
 
 <div id="main-wrapper">
-	<h1>听众列表</h1>
+	<h1>
+		<i class="glyphicon glyphicon-th-list"></i>听众列表
+	</h1>
 	<table id="table-audience" class="table table-striped">
 		<thead>
 		<tr>
