--- a/public/s/share.html
+++ b/public/s/share.html
@@ -6,8 +6,9 @@
 </style>
 
 <div id="main-wrapper">
-	<h1>文件共享</h1>
-
+	<h1>
+		<i class="glyphicon glyphicon-file"></i>文件共享
+	</h1>
 	<table id="table-filelist" class="table table-striped">
 		<thead>
 		<tr>
@@ -17,10 +18,8 @@
 			<th>操作</th>
 		</tr>
 		</thead>
-
 		<tbody></tbody>
 	</table>
-
 	<form id="form-upload">
 		<div class="form-group">
 			<div class="input-group">
@@ -32,7 +31,6 @@
 		</div>
 	</form>
 </div>
-
 <script>
 	var $table = $('#table-filelist'),
 		$tbody = $table.find('tbody'),
