--- a/public/s/votes.html
+++ b/public/s/votes.html
@@ -12,8 +12,9 @@
 </style>
 
 <div id="main-wrapper">
-	<h1>投票管理</h1>
-
+	<h1>
+			<i class="glyphicon glyphicon-list-alt"></i>投票管理
+	</h1>
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs">
 		<li>
