--- a/public/a/qna.html
+++ b/public/a/qna.html
@@ -1,14 +1,14 @@
 ﻿
 <div id="main-wrapper">
-	<h1>讲座提问</h1>
-
+	<h1>
+		<i class="glyphicon glyphicon-question-sign"></i>提问管理
+	</h1>
 	<form id="form-qna-toggle">
 		<div class="btn-group btn-group-lg">
 			<button class="btn btn-default" name="state" value="open" disabled>开启</button>
 			<button class="btn btn-default" name="state" value="close" disabled>关闭</button>
 		</div>
 	</form>
-
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs">
 		<li>
@@ -18,7 +18,6 @@
 			<a class="ex-link" href="#tab-add" data-toggle="tab">提出问题</a>
 		</li>
 	</ul>
-
 	<!-- Tab panes -->
 	<div class="tab-content">
 		<div class="tab-pane active" id="tab-list">
