--- a/public/a/view.html
+++ b/public/a/view.html
@@ -6,9 +6,10 @@
 	}
 </style>
 
-
 <div id="main-wrapper">
-	<h1>查看讲座</h1>
+	<h1>
+		<i class="glyphicon glyphicon-home"></i>查看讲座
+	</h1>
 	<ul class="list-group">
 		<li class="list-group-item">
 			<span class="li-label">讲座名称</span>
@@ -24,12 +25,24 @@
 		</li>
 	</ul>
 	<div class="btn-group-vertical">
-		<button href="#/audience" class="btn btn-default btn-lg btn-block">听众列表</button>
-		<button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
-		<button href="#/votes" class="btn btn-default btn-lg btn-block">投票列表</button>
-		<button href="#/qna" class="btn btn-default btn-lg btn-block">讲座提问</button>
-        <button href="#/lotterys" class="btn btn-default btn-lg btn-block">讲座抽奖</button>
-		<button id="btn-exit" class="btn btn-danger btn-lg btn-block">退出空间</button>
+		<button href="#/audience" class="btn btn-default btn-lg btn-block">
+		 	<i class="glyphicon glyphicon-th-list"></i>听众列表
+		 </button>
+		 <button href="#/share" class="btn btn-default btn-lg btn-block">
+		 	<i class="glyphicon glyphicon-file"></i>共享文件
+		 </button>
+		 <button href="#/votes" class="btn btn-default btn-lg btn-block">
+		 <i class="glyphicon glyphicon-list-alt"></i>投票管理
+		 </button>
+		 <button href="#/qna" class="btn btn-default btn-lg btn-block">
+		 <i class="glyphicon glyphicon-question-sign"></i>提问管理
+		 </button>
+		 <button href="#/lotterys" class="btn btn-default btn-lg btn-block">
+		 <i class="glyphicon glyphicon-th"></i>抽奖管理
+		 </button>
+		 <button id="btn-close" class="btn btn-danger btn-lg btn-block">
+		 <i class="glyphicon glyphicon-record"></i>关闭讲座
+		 </button>
 	</div>
 </div>
 
