--- a/public/a/votes.html
+++ b/public/a/votes.html
@@ -10,8 +10,9 @@
 </style>
 
 <div id="main-wrapper">
-	<h1>投票列表</h1>
-
+	<h1>
+			<i class="glyphicon glyphicon-list-alt"></i>投票管理
+	</h1>
 	<table id="table-votelist" class="table table-striped">
 		<thead>
 		<tr>
