--- a/public/s/lotterys.html
+++ b/public/s/lotterys.html
@@ -1,7 +1,9 @@
 
 <div id="main-wrapper">
-	<h1>抽奖管理</h1>
-
+	
+	<h1>
+		<i class="glyphicon glyphicon-th"></i>抽奖管理
+	</h1>
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs">
 		<li>
