--- a/public/s/qna.html
+++ b/public/s/qna.html
@@ -1,7 +1,8 @@
 
 <div id="main-wrapper">
-	<h1>提问管理</h1>
-
+	<h1>
+		<i class="glyphicon glyphicon-question-sign"></i>提问管理
+	</h1>
 	<form id="form-qna-toggle">
 		<div class="btn-group btn-group-lg">
 			<button type="submit" class="btn btn-default" name="state" value="open">开启</button>
