--- a/public/a/vote.html
+++ b/public/a/vote.html
@@ -12,7 +12,7 @@
 				<div id="words" class="btn-group-vertical" data-toggle="buttons">
                     <script type="text/html" id= "label-tmpl">
                         <label class="btn btn-default btn-lg btn-block">
-                            <input type="radio" name="word" value="<%- option %>">
+                            <input type="radio" name="index" value="<%- index %>">
                                    <%- option %>
                         </label>
 
@@ -59,12 +59,12 @@
 			options = vote['options'];
 
 		$('#content').text(content);
-		var pairs = _.pairs(options);
-		$listWords.html(_.reduce(pairs, function(memo, pair, i){
-            return memo + labelTmpl({
-                option: pair[0]
-            });
-        }, '')
+        $listWords.html(_.reduce(options, function(memo, option, i){
+                return memo + labelTmpl({
+                    option: option.word,
+                    index:i
+                });
+            }, '')
         );
 	});
 </script>
