--- a/public/a/view.html
+++ b/public/a/view.html
@@ -32,16 +32,16 @@
 		 	<i class="glyphicon glyphicon-file"></i>共享文件
 		 </button>
 		 <button href="#/votes" class="btn btn-default btn-lg btn-block">
-		 <i class="glyphicon glyphicon-list-alt"></i>投票管理
+		 <i class="glyphicon glyphicon-list-alt"></i>讲座投票
 		 </button>
 		 <button href="#/qna" class="btn btn-default btn-lg btn-block">
-		 <i class="glyphicon glyphicon-question-sign"></i>提问管理
+		 <i class="glyphicon glyphicon-question-sign"></i>讲座提问
 		 </button>
 		 <button href="#/lotterys" class="btn btn-default btn-lg btn-block">
-		 <i class="glyphicon glyphicon-th"></i>抽奖管理
+		 <i class="glyphicon glyphicon-th"></i>讲座抽奖
 		 </button>
-		 <button id="btn-close" class="btn btn-danger btn-lg btn-block">
-		 <i class="glyphicon glyphicon-record"></i>关闭讲座
+		 <button id="btn-exit" class="btn btn-danger btn-lg btn-block">
+		 <i class="glyphicon glyphicon-record"></i>退出讲座
 		 </button>
 	</div>
 </div>
