style for table th.op

--- a/public/a/lotterys.html
+++ b/public/a/lotterys.html
@@ -1,4 +1,10 @@
 
+<style>
+	#table-lotterylist th.op {
+		min-width: 50px;
+	}
+</style>
+
 <div id="main-wrapper">
 	<h1>
 		<i class="glyphicon glyphicon-th"></i>抽奖管理
@@ -8,7 +14,7 @@
 		<tr>
 			<th class="long">抽奖</th>
 			<th>状态</th>
-			<th>操作</th>
+			<th class="op">操作</th>
 		</tr>
 		</thead>
 		<tbody>
