--- a/public/a/votes.html
+++ b/public/a/votes.html
@@ -1,11 +1,7 @@
 ﻿
 <style>
-	#table-votelist th:nth-child(1) {
-		min-width: 80px;
-	}
-	#table-votelist th:nth-child(2),
-	#table-votelist th:nth-child(3) {
-		min-width: 60px;
+	#table-votelist th.op {
+		min-width: 50px;
 	}
 </style>
 
@@ -19,7 +15,7 @@
 			<th>问题</th>
 			<th>状态</th>
 			<th>是否参与</th>
-			<th>操作</th>
+			<th class="op">操作</th>
 		</tr>
 		</thead>
 		<tbody>
