--- a/public/s/audience.html
+++ b/public/s/audience.html
@@ -1,4 +1,10 @@
 
+<style>
+	#table-audience th.op {
+		min-width: 50px;
+	}
+</style>
+
 <div id="main-wrapper">
 	<h1>
 		<i class="glyphicon glyphicon-th-list"></i>听众列表
@@ -8,7 +14,7 @@
 		<tr>
 			<th>昵称</th>
 			<th>在线时长</th>
-			<th>操作</th>
+			<th class="op">操作</th>
 		</tr>
 		</thead>
 		<tbody>
