--- a/public/s/votes.html
+++ b/public/s/votes.html
@@ -1,12 +1,6 @@
 
 <style>
-	#table-votelist th:nth-child(1) {
-		min-width: 80px;
-	}
-	#table-votelist th:nth-child(2) {
-		min-width: 60px;
-	}
-	#table-votelist th:nth-child(3) {
+	#table-votelist th.op {
 		min-width: 135px;
 	}
 </style>
@@ -33,7 +27,7 @@
 				<tr>
 					<th class="long">问题</th>
 					<th>状态</th>
-					<th>操作</th>
+					<th class="op">操作</th>
 				</tr>
 				</thead>
 				<tbody>
