--- a/public/s/share.html
+++ b/public/s/share.html
@@ -1,6 +1,6 @@
 
 <style>
-	#table-filelist th:nth-child(4) {
+	#table-filelist th.op {
 		min-width: 50px;
 	}
 </style>
@@ -15,7 +15,7 @@
 			<th>文件名</th>
 			<th>文件大小</th>
 			<th>下载次数</th>
-			<th>操作</th>
+			<th class="op">操作</th>
 		</tr>
 		</thead>
 		<tbody></tbody>
@@ -81,7 +81,8 @@
 
 	var validExts = [
 		'doc', 'docx', 'ppt', 'pptx' , 'xls', 'xlsx', 'pdf',
-		'txt', 'jpg', 'jpeg', 'png', 'bmp', 'gif'
+		'txt', 'jpg', 'jpeg', 'png', 'bmp', 'gif',
+		'zip', '7zip', 'rar', 'tar', 'gz'
 	], $form = $('#form-upload');
 	$form.on('submit', function(event) {
 	   event.preventDefault();  // 禁止默认转页行为
