--- a/public/s/viewvote.html
+++ b/public/s/viewvote.html
@@ -56,7 +56,7 @@
                 return memo + [
                     '<li>',
                     '<div class="square-count"></div>',
-                        '<span class="count">'+ option.count +' ('
+                        '<span class="count">'+ option.count +'&nbsp;&nbsp;&nbsp;('
                                 + (sum ? ((option.count/sum)*100).toFixed(2) : 0) +
                             '%)</span>',
                     '</li>'
