--- a/public/a/index.html
+++ b/public/a/index.html
@@ -37,8 +37,8 @@
 								<li><a href="#/view">查看讲座</a></li>
 								<li><a href="#/audience">听众列表</a></li>
 								<li><a href="#/share">共享文件</a></li>
-								<li><a href="#/votes">投票列表</a></li>
 								<li><a href="#/qna">讲座提问</a></li>
+								<li><a href="#/votes">讲座投票</a></li>
 								<li><a href="#/lotterys">讲座抽奖</a></li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
